packages/typ/tests/fixtures/diagnostics/0584_functor_generative_value_mismatch_04.ml.expected
File "0584_functor_generative_value_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0584_functor_generative_value_mismatch_04 is not a valid module name.

File "0584_functor_generative_value_mismatch_04.ml", line 9, characters 20-33:
9 | let _ : B_delta.t = A_delta.value
                        ^^^^^^^^^^^^^
Error: The value A_delta.value has type A_delta.t
       but an expression was expected of type B_delta.t
